[package]
name = "Proxy_API_Server"
version = "0.1.0"
authors = ["ForeztGump - TB"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
env_logger = "0.7.1"
dotenv = "0.15.0"
maud = { version = "*", features = ["actix-web"] }
actix-governor = "0.2"
rand = "0.8.4"